--- a/style.css
+++ b/style.css
@@ -67,3 +67,13 @@ body{
     border-radius: var(--radious-inner);
     font-weight: 550;
 }
+.body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* using Grid */
+/* .body{
+    display: grid;
+    place-items: center;
+} */
