--- a/style.css
+++ b/style.css
@@ -78,3 +78,10 @@ body{
     display: grid;
     place-items: center;
 } */
+.body img{
+    max-width: 100%;
+    max-height: 100%;
+    margin-block: 10px;
+    padding: 20px;
+    border: 0.5px solid var();
+}
