--- a/style.css
+++ b/style.css
@@ -83,5 +83,6 @@ body{
     max-height: 100%;
     margin-block: 10px;
     padding: 20px;
-    border: 0.5px solid var();
+    border: 0.5px solid var(--border-color);
+    border-radius: 5%;
 }
