--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body{
     justify-content: space-between;
 }
 .footer{
-    margin-top: 30px;
+    /* margin-top: 30px; */
     display: flex;
     justify-content: center;
 }
@@ -85,4 +85,15 @@ body{
     padding: 20px;
     border: 0.5px solid var(--border-color);
     border-radius: 5%;
+}
+
+@media screen and (max-width:520px) {
+    .box{
+        width: 80%;
+    }
+    .footer a{
+        padding: 12px;
+        font-size: 16px;
+    }
+    
 }
